Trabajo -Felipphe Triviño'- Día 04-09-2013 (WAR)

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -176,3 +176,8 @@ a:link:hover, a:visited:hover  {
     background-color: #C6FCD3;
     background-image:none;
 }
+
+/*888888888888888888888888888888888888*/
+
+
+
