Trabajo -Felipphe- Día 15-10-2013

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -209,6 +209,7 @@ a:link:hover, a:visited:hover  {
 
 /*PROGRESS BAR*/
 .animated .ui-progressbar-value {
-    border:0px;
-    background-image: url("Imagenes/bar.gif"); 
+    border: 0px;
+    background-image: url("bar.gif"); 
+    padding: 0px;
 }
