--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -242,3 +242,15 @@ textarea {
 .tabViewModulos{
     direction: ltr;
 }
+
+.ui-datatable .ui-datatable-data tr.ui-state-hover {
+    color: black !important;
+    background: none ;
+    cursor:  inherit;
+}
+
+.ui-datatable .ui-datatable-even.ui-state-hover{
+    color: black !important;
+    background: none ;
+    cursor:  inherit;
+}
