Se implementa una vista que facilita la consulta de los empleados con el tipo del tipo de trabajador. Se corrige el llamado de las listas de valores para que solo se consulten una vez. Se implementa un método que permite consultar de a 1 empleado, lo que permite ingresar más rápido.

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
@@ -376,3 +376,9 @@ and open the template in the editor.
     background: #CBCFDA;
     padding: 0px 3px;
 }
+
+.cssBotonesPaginadorPersonalizado{
+    position: absolute;
+    width: 25px;
+    height: 25px;
+}
