--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -32,6 +32,15 @@ a:link:hover, a:visited:hover  {
     padding: 0;
 }
 */
+.separador {
+    background: #A8A8A8; 
+    border: none; 
+    width: 2px; 
+    clear: none; 
+    height: 22px; 
+    margin: 0px 10px 0; 
+    box-shadow: none;
+}
 .ui-felipe>.ui-datagrid-content {
     border: none;
 }
