24 de febrero de 2016 Edwin Hastamorir Los iconos de busqueda avanzada y de navegación por registro ahora son png y se ubican en la carpeta Imagenes/Iconos/ Se reorganizaron los elementos alrededor del nombre del empleado. Se unificó el nombre del empleado en una sola caja de texto. Falta alinear los elementos pues los navegadores no las organizan de manera unificada. Hay que adicionar los íconos de la navegabilidad por registro en la carpeta personal.

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
@@ -395,6 +395,7 @@ and open the template in the editor.
     font-weight: bold; 
     border: 1px solid #cccccc;
     color: red;
+    padding: 6px;
 }
 .cssBotonCancelar{
     font-weight: bold; 
@@ -405,4 +406,8 @@ and open the template in the editor.
     font-weight: bold; 
     border: 1px solid #cccccc;
     color: red;
+}
+
+.ui-button-text-only .ui-button-text{
+    padding: 0 0 0;
 }
