--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -34,7 +34,7 @@ a:link:hover, a:visited:hover  {
 */
 .separador {
     background: #A8A8A8; 
-    border: none; 
+    border: #000000; 
     width: 2px; 
     clear: none; 
     height: 22px; 
