--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -41,7 +41,7 @@ a:link:hover, a:visited:hover  {
     margin: 0px 10px 0; 
     box-shadow: none;
 }
-.ui-felipe>.ui-datagrid-content {
+.ui-felipe .ui-datagrid-content {
     border: none;
 }
 
