--- a/DesignerRHN/DesignerRHN-war/web/resources/css/cssLayout.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/cssLayout.css
@@ -35,11 +35,13 @@
     position: absolute; 
     left:230px; 
     top: 0px;
-    width: 1000px;
+    /*width: 1100px;*/
+    width:83%;
     height: 600px;
-    background-image: url(../../Imagenes/encabezadotemplate.png); 
+    min-width: 900px;
+    background-image: url(../../Imagenes/Iconos/fondoder.png); 
     background-size: 100% 100%; 
-    background-repeat: repeat;
+    background-repeat: repeat-x;
 }
 .left_content {
     padding: 5px;
