11 de abril de 2016 Edwin Hastamorir Primeras modificaciones a la página cuenta.xhtml

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
@@ -421,4 +421,12 @@ button .ui-widget-header{
     background: transparent;
     /*border-color: #61A0CA;*/
     border-color: #8a8a8a;
+    position: absolute; 
+    top: 37px; 
+    left: 12px; 
+    height: 23px;
+}
+.cssToobarButton{
+    width: 25px; 
+    height: 25px; 
 }
