12 de abril de 2016 Edwin Hastamorir Segundas modificaciones a la página cuenta.xhtml

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
@@ -151,7 +151,8 @@ button .ui-widget-header{
     background-image: url("images/ui-icons_ffffff_256x240.png");
 }
 .ui-state-highlight .ui-icon {
-    background-image: url("images/ui-icons_255ac2_256x240.png");
+    /*background-image: url("images/ui-icons_255ac2_256x240.png");*/
+    background-image: url("images/ui-icons_ffffff_256x240.png");
 }
 .ui-state-error .ui-icon,
 .ui-state-error-text .ui-icon {
