--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -60,9 +60,9 @@ a:link:hover, a:visited:hover  {
 
 
 .ui-datatable tfoot td {
-    /*padding: 0px 10px !important;
-    height: 10px !important;*/
-    padding: 0px 0px;
+    padding: 0px 10px !important;
+    height: 10px !important;
+    /*padding: 0px 0px;*/
     height: 10px;
 }
 
