19 de abril de 2016 Edwin Hastamorir Ajustes a los estilos css del toolbar y el growl

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
@@ -436,7 +436,8 @@ button .ui-widget-header{
     position: absolute; 
     top: 37px; 
     left: 12px; 
-    height: 23px;
+    height: 25px;
+    width: 96%;
 }
 .cssToobarButton{
     width: 25px; 
