--- a/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/Tema.css
@@ -432,7 +432,7 @@ button .ui-widget-header{
 .cssToolbar{
     background: transparent;
     /*border-color: #61A0CA;*/
-    border-color: #8a8a8a;
+    border-color: #C7BFBF;
     position: absolute; 
     top: 37px; 
     left: 12px; 
