29 de abril de 2016 Edwin Hastamorir Modificacion de la página iniciored para que se pueda organizar de manera central.

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/GrowlInicioRed.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/GrowlInicioRed.css
@@ -35,4 +35,19 @@ root {
     text-shadow: none;
     font-weight: bold;
 }
-
+.columnaPieA{
+    text-align: left;
+}
+.columnaPieB{
+    text-align: right;
+}
+.columnaConectA{
+    text-align: right;
+    width: 30%;
+}
+.columnaConectB{
+    text-align: right;
+}
+.columnaConectC{
+    text-align: left;
+}
