5 de mayo de 2016 Edwin Hastamorir Modificación visual de la pagina empleadoindividual Creación de la página generaconsulta.xhtml con sus correspondientes controlador, administrar. Se adicionó una consulta a recordatorios. Se corrigió la forma de acceder a las consultas de la tabla recordatorios utilizando una imagen, para que no muestre la imagen por default si ya tiene una imagen de consulta.
Pendiente:
Validar funcionamiento de las listas de empleadoindividual.
Corregir error en el componente de fechas de empleadoindividual.
Correcciones a la pagina nreportenomina.

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/GrowlInicioRed.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/GrowlInicioRed.css
@@ -3,9 +3,11 @@ root {
 }
 
 .ui-growl{
-    position: relative;
+    /*position: relative;
     margin: 0 auto;
-    left: -480px;
+    left: -480px;*/
+    top: 120px;
+    left: 0px;
 }
 .ui-growl-image-info{
     visibility: hidden;
