--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -291,3 +291,6 @@ textarea {
 .ui-selectmanycheckbox label, .ui-selectoneradio label{
     margin-top: 0px;
 }
+[id*=calendarFechaNacimiento]{
+    width: 95px;
+}
