--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -281,6 +281,7 @@ textarea {
     color: black !important;
     background: none ;
     cursor:  inherit;
+    box-shadow: none;
 }
 
 .ui-datatable .ui-datatable-even.ui-state-hover{
