2016/07/11 Miguel Angel Manrique
Optimizacion página proverbio

--- a/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
+++ b/DesignerRHN/DesignerRHN-war/web/resources/css/default.css
@@ -47,6 +47,13 @@ a:link:hover, a:visited:hover  {
 .ui-felipe .ui-datagrid-content {
     border: none;
 }
+.ui-spinner-button{
+    right: -170px;
+}
+
+.ui-spinner-input {
+    padding-right: 0px;
+}
 
 .ui-datagrid .ui-paginator {
     font-size: 10px;
